# name-variants

./: pyproject.toml
.github/workflows/: ci.yml
codegen/: gen_rust.py
docs/: 2026-05-07-design.md
docs/plans/: 2026-05-07-cli-design.md  2026-05-07-cli-implementation.md  2026-05-07-name-variants-rs.md
name-variants-rs/: Cargo.toml  README.md
name-variants-rs/src/: generated.rs  lib.rs
name_variants/: __init__.py  arabic_names.py  chinese_surnames.py  greek_names.py  hebrew_names.py  indian_names_bengali.py  indian_names_hindi.py  indian_names_tamil.py  indonesian_malay_names.py  japanese_surnames.py  korean_surnames.py  persian_names.py  russian_surnames.py  thai_names.py  turkish_names.py  vietnamese_surnames.py
tests/: test_lookup.py
