[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "name-variants"
version = "0.1.0"
description = "Multilingual name romanization lookup tables: Chinese, Japanese, Korean, Arabic, Vietnamese, Indian, Persian, Hebrew, Thai, Greek, Turkish, Russian, Indonesian/Malay"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []  # pure data — no runtime dependencies

[project.optional-dependencies]
normalize = [
    "opencc-python-reimplemented>=0.1",  # Traditional→Simplified Chinese
    "jaconv>=0.3",                        # kana normalization
]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["name_variants"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
